メモアプリの変更を追加

--- a/memoapp/templates/memoapp/list.html
+++ b/memoapp/templates/memoapp/list.html
@@ -1,7 +1,19 @@
-<h1>メモ一覧</h1>
-<ul>
-{% for memo in object_list %}
-    <li><a href="{% url 'detail' memo.pk %}">{{ memo.title }}</a></li>
-{% endfor %}
-</ul>
-<a href="{% url 'create' %}">新規作成</a>
+<!-- @format -->
+
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Django Mamo App</title>
+  </head>
+  <body>
+    <h1>メモ一覧</h1>
+    <ul>
+      {% for memo in object_list %}
+      <li><a href="{% url 'detail' memo.pk %}">{{ memo.title }}</a></li>
+      {% endfor %}
+    </ul>
+    <a href="{% url 'create' %}">新規作成</a>
+  </body>
+</html>
